--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,7 +36,7 @@ jobs:
           --file requirements-dev.txt
           --channel conda-forge
 
-    - name: Install template_project
+    - name: Install project locally
       shell: bash -l {0}
       run: |
         python -m pip install -e . --no-deps --force-reinstall
