--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,8 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-    - name: Install template_project
+
+    - name: Install project locally
       run: |
         python -m pip install -e . --no-deps --force-reinstall
 
