--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ requires = [
 ]
 
 [project]
-name = "template-project-efw"
-description = "Example template project for docs, pip install and git"
+name = "flightmodels"
+description = "Software to run glider flight models on OG1 format data."
 readme = "README.md"
 license = { file = "LICENSE" }
 maintainers = [
@@ -26,14 +26,14 @@ dynamic = [
   "dependencies",
   "version",
 ]
-urls.documentation = "https://github.com/eleanorfrajka/template-project"
-urls.homepage = "https://github.com/eleanorfrajka/template-project"
-urls.repository = "https://github.com/eleanorfrajka/template-project"
+urls.documentation = "https://github.com/eleanorfrajka/flightmodels"
+urls.homepage = "https://github.com/eleanorfrajka/flightmodels"
+urls.repository = "https://github.com/eleanorfrajka/flightmodels"
 
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["template_project"]
+include = ["flightmodels"]
 
 [tool.setuptools.dynamic]
 dependencies = { file = [
@@ -42,7 +42,7 @@ dependencies = { file = [
 readme = { file = "README.md", content-type = "text/markdown" }
 
 [tool.setuptools_scm]
-write_to = "template_project/_version.py"
+write_to = "flightmodels/_version.py"
 write_to_template = "__version__ = '{version}'"
 tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
 version_scheme = "no-guess-dev"
