--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,13 @@ xarray>=2023.12.0
 netcdf4>=1.6
 scipy>=1.10
 
+# Oceanographic tools
+gsw>=3.6.16
+#cmocean>=2.0  # optional, confirm usage
+#cartopy>=0.22  # optional, confirm usage
+
+# Progress bar (optional)
+#tqdm>=4.66  # optional, confirm usage
+
 # Plotting
 matplotlib>=3.7
